# shooting_web

./: Cargo.toml  Dockerfile  README.md  bullet.js  index.html  keystate.js  player2.html  server.py  ship.js  vector.js
client/: Cargo.toml  game.html
client/static/: game.js
server/: .env  Cargo.toml
server/src/: bullet.rs  keystate.rs  main.rs  server.rs  session.rs  ship.rs
server/static/: game_ws.html  game_wss.html  index.html  lobby.css
vector/: Cargo.toml
vector/src/: lib.rs
