[package]
name = "shooting_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.25"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
vector = { path = "../vector" }
